--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,14 @@ dependencies:
   # State
   flutter_bloc:
 
-  #API
+  # API
   dio: ^3.0.1
   retrofit: 1.3.4+1
   pretty_dio_logger: ^1.1.1
   json_serializable: ^3.5.0
+
+  # DB
+  floor: ^0.19.1
 
   # DI
   get_it:
@@ -50,12 +53,16 @@ dev_dependencies:
   meta:
   retrofit_generator:
   flutter_gen_runner:
-  injectable_generator:
+  injectable_generator: 1.0.7
   test:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
+  floor_generator: ^0.19.1
+
+dependency_overrides:
+  analyzer: ^0.40.1
 
 flutter:
   uses-material-design: true
